[gd_scene load_steps=5 format=3 uid="uid://c20klam7tqsvg"]

[ext_resource type="Script" path="res://scenes/enemies/Boss Deer.gd" id="1_evr44"]
[ext_resource type="Texture2D" uid="uid://bijk7lq442l0f" path="res://Assets/deer.png" id="2_1v8b8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nqfno"]
radius = 127.969

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8alql"]
size = Vector2(1114, 414)

[node name="Boss Deer" type="CharacterBody2D"]
script = ExtResource("1_evr44")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
scale = Vector2(30, 30)
shape = SubResource("CircleShape2D_nqfno")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.7

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_1v8b8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_8alql")

[node name="twinlaser2" type="Marker2D" parent="."]
position = Vector2(719, 421)

[node name="twinlaser1" type="Marker2D" parent="."]
position = Vector2(703, -428)

[node name="snowball" type="Marker2D" parent="."]
position = Vector2(900, 0)

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
